# pytextgame

./: .gitignore  CONTRIBUTERS.txt  CONTRIBUTING.md  COPYRIGHTS.md  LICENSE  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  pyproject.toml
src/: pytextgame.py  pytextgame.pyproj  pytextgame.sln  test03.py
src/PyTextGame.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pytextgame/: core.py  io.py  main.py  pytextgame_w.pyw  settings.json
src/pytextgame/actors/: charecter.py  chracters.py  items.py
src/pytextgame/components/: __init__.py  compartments.py  dat.py  errors.py  frames.py  rooms.py  scene.py
src/pytextgame/exceptions/: __init__.py
src/pytextgame/graphics/: text.py
