[build-system]
requires = ["setuptools>=61.0", "wheel", "Pillow"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTextGame"
version = "1.1.0.b.2"
authors = [
  { name="Himank Deka", email="neil.himank3@gmail.com" },
]
description = "A package for building text based games."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dev-hd11/pytextgame"
"Bug Tracker" = "https://github.com/dev-hd11/pytextgame/issues"


[package.data.include]
# List files or directories to include in the package
include = ["./src/pytextgame/pytextgame_w.pyw", "./src/pytextgame/settings.json", "images/*"]
